<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.codeselect.movieproject1.MovieDetailFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_title_height"
            android:background="@color/title_back_color"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/content_padding"
            android:paddingRight="@dimen/padding_normal"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/padding_normal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/thumb"
                    android:layout_width="@dimen/detail_image_width"
                    android:layout_height="@dimen/detail_image_height"
                    android:scaleType="centerCrop"
                    android:src="@drawable/no_thumb" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/content_padding"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2015"
                        android:textSize="22sp" />


                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_small"
                        android:text="8.1/10"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@+id/favourite"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/favourite_btn_height"
                        android:layout_marginTop="@dimen/padding_small"
                        android:background="@drawable/favourite_back"
                        android:paddingLeft="@dimen/padding_small"
                        android:paddingRight="@dimen/padding_small"
                        android:text="@string/set_as_favourite"
                        android:foreground="?android:selectableItemBackground"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/favourite_btn_text_size" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="@string/temp_overview"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/trailers_header"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/divider" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small">

                <TextView
                    android:id="@+id/empty_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_trailer_available"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailer_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:minHeight="@dimen/trailer_thumb_height" />
            </FrameLayout>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/section_margin"
            android:text="@string/reviews_header"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_thickness"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/review_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/trailer_thumb_height"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin" />
    </LinearLayout>
</ScrollView>